    1.0.1, adding API calls such as DOSBox-X's version
    number and platform, and some DOS-related status
    such as DOS version number. (Wengier)
  - Use long double for internal event scheduling
    if available, to improve accuracy (joncampbell123).
  - Fix remaining SDL2 Windows problems by adding
    missing break statement above window event
    handler. (joncampbell123).
  - Add workarounds for SDL2 builds to avoid problems
    with window resize, menu update, and restore
    events that sometimes caused the emulator to hang
    on startup in Windows. (joncampbell123).
  - Add "Set transparency..." menu option under "Video"
    to change window transparency. (Wengier)
  - Add special properties to CONFIG command including
    "system" and "version". (Wengier)
  - Fix creation of disk images with spaces using the
    "Create blank disk image..." menu option. (Wengier)
  - Fix IMGMAKE to provide executable code in MS-DOS
    partition or floppy disk boot sector following
    the BPB, that prints "This is not a bootable disk"
    instead of leaving zeros that lead the CPU astray
    and possibly hang the system in the event anything
    tries to boot the partition (joncampbell123).
  - Fix emulator segfault on invalid encoding of
    BOUND instruction (joncampbell123).
  - Address auto-centering on mode change complaints
    by making the "-" setting of windowposition the
    default. (joncampbell123).
  - Added MinGW-lowend SDL2 build, which is compatible
    with Windows XP. Also updated the build selection
    page for Windows installers. (Wengier)
  - Fix windows transparency during TTF output switch
    in Windows SDL2 builds. (Wengier)
  - Fix SDL2 Windows builds to flag a resize as not
    user initiated only if the presence of the menu
    bar changes. This fixes a problem where SDL2
    builds did not acknowledge window resize events
    at all. (joncampbell123).
  - Fix FluidSynth weird sound issue in 32-bit Visual
    Studio SDL2 build. (Wengier)