@@ -2574,11 +2574,14 @@ xBRZ
 :MENU:scaler_set_xbrz_bilinear
 xBRZ Bilineal
 .
+:MENU:set_titletext
+Establecer el texto de la barra de título...
+.
 :MENU:set_transparency
 Establecer transparencia...
 .
 :MENU:refresh_rate
-Tasa de refresco...
+Ajustar la tasa de refresco...
 .
 :MENU:VideoOutputMenu
 Salida de vídeo
