@@ -2592,11 +2592,14 @@ xBRZ
 :MENU:scaler_set_xbrz_bilinear
 xBRZ Bilinear
 .
+:MENU:set_titletext
+Definir texto da barra de título...
+.
 :MENU:set_transparency
 Definir transparência...
 .
 :MENU:refresh_rate
-Taxa de atualização...
+Ajustar a taxa de atualização...
 .
 :MENU:VideoOutputMenu
 Saída de vídeo
