@@ -2570,11 +2570,14 @@ xBRZ
 :MENU:scaler_set_xbrz_bilinear
 xBRZ İkidoğrulu
 .
+:MENU:set_titletext
+Başlık çubuğu metnini ayarla...
+.
 :MENU:set_transparency
 Şeffaflığı ayarla...
 .
 :MENU:refresh_rate
-Yenileme oranı...
+Yenileme hızını ayarla...
 .
 :MENU:VideoOutputMenu
 Çıkış
