@@ -8,12 +8,15 @@
   - Fix remaining SDL2 Windows problems by adding
     missing break statement above window event
     handler. (joncampbell123).
+  - Move "Always on top" menu option to "Main" menu,
+    also enabled for Windows SDL2 builds. (Wengier)
   - Add workarounds for SDL2 builds to avoid problems
     with window resize, menu update, and restore
     events that sometimes caused the emulator to hang
     on startup in Windows. (joncampbell123).
-  - Add "Set transparency..." menu option under "Video"
-    to change window transparency. (Wengier)
+  - Add "Set transparency..." and "Set text in title
+    bar..." menu options under "Video" to change window
+    transparency and title bar text. (Wengier)
   - Add special properties to CONFIG command including
     "system" and "version". (Wengier)
   - Fix creation of disk images with spaces using the
